# action_server/tests/action_server_tests/test_server/test_server_full_openapi_flag.yml
@@ -29,6 +29,11 @@ components:
         lineno:
           title: Lineno
           type: integer
+        managed_params_schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Managed Params Schema
         name:
           title: Name
           type: string
